Update swagger.js with users table model.
